# vanguard_ws

./: .gitignore  README.md
flask_server/: app.py  requirement.txt
src/common/: coordinate_transforms.py
src/control/: package.xml  setup.py
src/control/control/: arm_disarm.py  drone_control.py  hover.py  path.yaml  path_following.py  translation_control.py
src/localization/: CMakeLists.txt  package.xml  setup.py
src/localization/config/: ar_tag_positions.yaml
src/localization/localization/: ar_checker.py  ar_checker_judge.py  ar_detection.py  ar_obstacle.py  final_challenge_sol.py  global_localization.py  global_pose_estimation.py  tags_locations.txt
src/localization/msg/: TagDetection.msg
src/vision/: package.xml  setup.py
src/vision/vision/: camera_publisher.py  camera_subscriber.py  depth_publisher.py
