<?xml version="1.0"?>
<package format="3">
  <name>localization</name>
  <version>0.0.0</version>
  <description>ROS2 package for drone localization using AR tags and odometry</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>

  <member_of_group>rosidl_default_runtime</member_of_group>
  <member_of_group>rosidl_interface_packages</member_of_group>'

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


